# Notes

./: .gitattributes  .gitignore  .gitmodules  Jenkinsfile  README.md  TODO.txt
.github/workflows/: android.yml  ci.yml
Notes/: build.gradle  local.properties  settings.gradle
Notes/app/: build.gradle  debug.keystore  local.properties  proguard-rules.pro  test_only.jks
NotesApp/: TODO.list  build.gradle.kts  settings.gradle.kts
NotesApp/api/: build.gradle.kts
NotesApp/app/: build.gradle.kts  google-services.json
NotesApp/auth/: build.gradle.kts
NotesApp/auth_ui/: build.gradle.kts
NotesApp/data/: build.gradle.kts
NotesApp/gradle/: libs.versions.toml
NotesApp/gradle_configs/: versions.gradle
NotesApp/interfaces/: build.gradle.kts
NotesApp/net/: build.gradle.kts
NotesApp/notes_ui/: build.gradle.kts
Server/: build.gradle.kts  settings.gradle.kts
Tools/: jenkins.sh
gradle_configs/: common_android_versions.gradle  common_build_script_versions.gradle  common_ndk_version.gradle
images/: app_design.excalidraw  package_diagram.puml  package_structure.dot  package_structure_diagram.excalidraw  screenshot_1  screenshot_3
jenkins/plugins/: junit.jpi
sdk/: CMakeLists.txt
sdk/3th_parties/openssl/: .Android.mk.swp
sdk/3th_parties/openssl/openssl/: async.h  bio.h  bn.h  cms.h  crypto.h  des.h  dsa.h  engine.h  hmac.h  kdf.h  lhash.h  objects.h  pem.h  pkcs7.h  store.h  x509.h
sdk/certs/: ca_cert.cpp  ca_cert.h  req_cert.cpp  req_cert.h  rsa_key.cpp  rsa_key.h  sign_req_cert.cpp  sign_req_cert.h  utils.cpp  utils.h  xname.cpp  xname.h
sdk/common/: CMakeLists.txt  base64.cpp  base64.h  connection_observer.h  exception.cpp  exception.h  log.cpp  log.h  observable_subject.h
sdk/concurrency/: CMakeLists.txt  native_executor.h
sdk/crypto/: hash.h  operations.cpp  operations.h
sdk/net/: CMakeLists.txt  constants.cpp  constants.h  json_parser.cpp  json_parser.h  socket.cpp  socket.h
sdk/server/common/: CMakeLists.txt  constants.cpp  constants.h
sdk/server/core/: CMakeLists.txt  core.cpp  core_receiver.cpp  core_receiver.h  registrat.cpp  registrat.h  server_manager.cpp  server_manager.h
sdk/server/core/impl_services/: CMakeLists.txt  iml_children_process_operator.cpp  iml_children_process_operator.h  impl_channel_service.cpp  impl_channel_service.h  impl_exit_service.cpp  impl_exit_service.h
sdk/server/core/interface/: service_channel.h  service_exit.h  service_waite.h
sdk/server/net/: CMakeLists.txt  connection_receiver.cpp  connection_receiver.h  connection_state.cpp  connection_state.h  socket.cpp  socket.h  socket_handler.cpp  socket_handler.h
tools/: android.py  build.sh  build_and_test.sh  build_app.sh  build_jvm_desktop.sh  generate_module_diagram.py  jenkins.sh  jenkins_clean_up.sh  run_tests.sh  utility_functions.sh
(+964 files in other folders)
